--- a/atestado.html
+++ b/atestado.html
@@ -34,6 +34,7 @@
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
             position: relative;
             overflow: hidden;
+            margin-bottom: 20px; /* Espaço para o texto adicional no PDF */
         }
         
         /* Logo */
@@ -167,7 +168,7 @@
         </div>
     </div>
 
-    <!-- Informação adicional -->
+    <!-- Informação adicional para o PDF -->
     <div class="info-adicional">
         <p>Nossos documentos são originais e possuem CRM ativo da sua cidade.</p>
         <p>O documento só é validado após o pagamento. Após o pagamento, será possível fazer o download do documento original.</p>
@@ -200,5 +201,6 @@
         const dataAtestado = localStorage.getItem('dataAtestado');
         document.getElementById('dataAtestado').textContent = formatarData(dataAtestado);
     </script>
+
 </body>
 </html>
